# 3D_Scanning_and_Motion_Capture

./: README.md
Exercises/3dsmc-original_exercise_file/Exercise-3/: CMakeLists.txt  dragon.cpp  gaussian.cpp  surface.cpp
Exercises/3dsmc-original_exercise_file/Exercise-3/build2/: CMakeCache.txt  Makefile  cmake_install.cmake  surface
Exercises/3dsmc-original_exercise_file/Exercise-3/build3/: CMakeCache.txt  Makefile  cmake_install.cmake  dragon
Exercises/3dsmc-original_exercise_file/Exercise-3/utils/: io.h  points.h
Exercises/3dsmc-original_exercise_file/Exercise4/: CMakeLists.txt  ProcrustesAligner.h  SimpleMesh.h  main.cpp
Exercises/3dsmc-submission/Exercise-1/debug/: CMakeLists.txt  VirtualSensor.h  main.cpp  main_copy_from_gh.cpp  main_old_v1.cpp
Exercises/3dsmc-submission/Exercise-1/old_version/: README.md  main.cpp  teammembers.txt
Exercises/3dsmc-submission/Exercise-1/submission/: V1_and_V2_main.cpp  teammembers.txt
Exercises/3dsmc-submission/Exercise-2/: ImplicitSurface.h  MarchingCubes.h
Exercises/3dsmc-submission/Exercise-2/debug_version/: main.cpp
Exercises/3dsmc-submission/Exercise-2/debug_version/Mesh_Result/: result_RBF.off
Exercises/3dsmc-submission/Exercise-2/debug_version/fail/: result_Hoppe.off  result_RBF.off  result_sphere.off  result_torus.off
Exercises/3dsmc-submission/Exercise-2/submission/: ImplicitSurface.h  MarchingCubes.h  team_members.txt
Exercises/3dsmc-submission/Exercise-2/submission/Mesh_Result/: result_Hoppe.off
Exercises/3dsmc-submission/Exercise-3/: dragon.cpp  dragon_output.txt  gaussian.cpp  gaussion_output.txt  surface.cpp  surface_output.txt
Exercises/3dsmc-submission/Exercise-4/: bunny_procrustes.off
Exercises/3dsmc-submission/Exercise-5/: CMakeLists.txt  ICPOptimizer.h  PointCloud.h
Exercises/KineticFusion/: Eigen.h  KineticFusion.cu  VirtualSensor.h  compile_local.sh  tsdf2mesh.py  utils.hpp
